<resources>
    <string name="app_name">Base Structure</string>
    <string name="action_settings">Settings</string>
    <string name="action_test">Test</string>

    <string name="hint_networkError">No network connection available, please check your connection and try again.</string>

    <string name="menu_one">One</string>
    <string name="menu_two">Two</string>
    <string name="menu_three">Three</string>
    <string name="menu_four">Four</string>
    <string name="menu_five">Five</string>

    <string name="dot">•</string>
    <string name="hint_next">Next</string>
    <string name="hint_submit">Submit</string>
    <string name="hint_back">Back</string>
    <string name="hint_save">Save</string>
    <string name="hint_apply">Apply</string>
    <string name="hint_cancel">Cancel</string>

    <string name="msg_rate_us">Rate Us if you like this</string>
    <string name="msg_do_you_really">Do you really want to exit the Application?</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="rate">Rate</string>
</resources>
