<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_one"
            android:icon="@drawable/ic_menu_white_24dp"
            android:title="@string/menu_one" />
        <item
            android:id="@+id/nav_two"
            android:icon="@drawable/ic_menu_white_24dp"
            android:title="@string/menu_two" />
        <item
            android:id="@+id/nav_three"
            android:icon="@drawable/ic_menu_white_24dp"
            android:title="@string/menu_three" />
        <item
            android:id="@+id/nav_four"
            android:icon="@drawable/ic_menu_white_24dp"
            android:title="@string/menu_four" />
        <item
            android:id="@+id/nav_five"
            android:icon="@drawable/ic_menu_white_24dp"
            android:title="@string/menu_five" />

    </group>
</menu>
